# ruslin-android

./: .gitignore  .gitmodules  LICENSE  README-zh-CN.md  README.md  TERMS_OF_SERVICE_AND_PRIVACY_POLICY.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  pr.yaml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/dianqk/ruslin/: ExampleInstrumentedTest.kt
app/src/debug/res/drawable/: ic_launcher_background.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: github-markdown.min.css  wasm_basic.wasm
app/src/main/java/org/dianqk/ruslin/: MainActivity.kt  RuslinApplication.kt
app/src/main/java/org/dianqk/ruslin/data/: Settings.kt  (+3 more)
app/src/main/res/drawable/: format_h1.xml  format_h2.xml  format_h3.xml  format_h4.xml  format_h5.xml  format_h6.xml  ic_database.xml  ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/org/dianqk/ruslin/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 1003.txt  3.txt  500.txt  503.txt  603.txt  703.txt  803.txt  903.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/changelogs/: 3.txt  500.txt  503.txt  603.txt  703.txt  803.txt  903.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mdrender/: build.gradle  build.gradle.kts
mdrender/src/androidTest/java/org/dianqk/mdrender/: ExampleInstrumentedTest.kt
mdrender/src/main/java/org/dianqk/mdrender/: MarkdownVisualTransformation.kt
mdrenderbenchmark/: benchmark-proguard-rules.pro  build.gradle  build.gradle.kts
ruslin-data-uniffi/: Cargo.toml  build.rs  build.sh  fdroid-release.sh  release.sh  rust-toolchain.toml  uniffi-bindgen.rs
ruslin-data-uniffi/.cargo/: config.toml
ruslin-data-uniffi/src/: html.rs  lib.rs  plugin.rs  ruslin.udl
ruslin-data-uniffi/src/ffi/: folder.rs  mod.rs  note.rs  resource.rs  status.rs  sync_info.rs
scripts/: gcloud_benchmark.sh  local_device_benchmark.sh  prepare_artifacts.sh  prepare_release.js
uniffi/: build.gradle  build.gradle.kts  consumer-rules.pro
uniffi/src/androidTest/java/uniffi/ruslin/: ExampleInstrumentedTest.kt
uniffi/src/main/java/uniffi/ruslin/: ruslin.kt
uniffi/src/test/java/uniffi/ruslin/: ExampleUnitTest.kt
wasm-basic/: Cargo.toml
wasm-basic/src/: lib.rs
(+90 files in other folders)
