[package]
name = "ruslin-data-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "uniffi_ruslin"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.23" }
ruslin-data = { path = "./ruslin-data" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
android_logger = "0.12"
tokio = { version = "1.24", features = ["full"] }
libsqlite3-sys = { version = "0.25", features = ["bundled"] }
log4rs = "1.2"
pulldown-cmark = { version = "0.9.2", default-features = false }

[build-dependencies]
uniffi = { version = "0.23", features = ["build"] }

[profile.release]
lto = true

[patch.crates-io]
diesel = { git = 'https://github.com/DianQK/diesel.git', tag = "v2.0.2-p" }
