[package]
name = "wasm-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "1.1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
